Updating tmux colors and status

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,26 +1,110 @@
 # Reload config
-bind R source-file ~/.tmux.conf \; display-message "Config reloaded"
+bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
 
-# Change to S-s
-unbind-key C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+###########
+# vi mode #
+###########
+
+# Enable vi mode
+setw -g mode-keys vi
+
+bind Escape copy-mode
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection
+unbind p
+bind p paste-buffer
+
+############
+# Bindings #
+############
+
+# Change the prefix from C-b to C-a
+set -g prefix C-a
+unbind C-b
+
+# Send prefix C-a to other apps
+bind C-a send-prefix
+
+# Set the delay between prefix and command
+set -s escape-time 1
 
 # Enable mouse
-set-option -g mouse on
+set -g mouse on
 
 # Base 1 Windows
-set-option -g base-index 1
+set -g base-index 1
 
 # Base 1 Panes
-set-option -g pane-base-index 1
+setw -g pane-base-index 1
 
-# t and T for next and previous window
-bind-key t next-window
-bind-key T previous-window
+# Change splits to \ and -
+bind \ split-window -h 
+bind - split-window -v
 
-# change splits to \ and -
-bind-key \ split-window -h 
-bind-key - split-window -v
+# Move between panes with h,j,k,l
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
-set-window-option -g xterm-keys on
+# Move between windows w/ home keys
+bind -r C-h select-window -t :-
+bind -r C-l select-window -t :+
+
+# Resize panes with H,J,K,L
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
+##########
+# Colors #
+##########
+
+# Enable 256 color mode
+set -g default-terminal "screen-256color"
+
+# Status Style
+set -g status-style fg=colour35,bg=black
+
+# Windows list
+setw -g window-status-style fg=colour223,bg=black
+
+# Active window
+setw -g window-status-current-style fg=black,bg=colour35
+
+# Pane borders
+setw -g pane-border-style fg=colour35,bg=black
+setw -g pane-active-border-style fg=black,bg=colour35
+
+# Dim non-active panes
+setw -g window-style fg=colour240,bg=colour234
+setw -g window-active-style fg=colour230,bg=black
+
+# Command/Message 
+set -g message-style fg=black,bg=colour35
+
+# Activity
+setw -g window-status-activity-style fg=colour204,bg=black
+
+##########
+# Status #
+##########
+
+# Left side
+set -g status-left-length 40
+# set -g status-left "#[fg=colour35]#S #[fg=colour204]#I #[fg=colour221]#P:  "
+set -g status-left "#[fg=colour35]#S:  "
+
+# Right side
+set -g status-right "#[fg=colour35]%b %d #[fg=colour223]%R"
+
+# Update interval
+set -g status-interval 60
+
+# Justification
+set -g status-justify left
+
+# Show window activity
+setw -g monitor-activity on
+set -g visual-activity on
