opening tmux panes in current path by default

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,8 +38,8 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 # Change splits to \ and -
-bind \ split-window -h 
-bind - split-window -v
+bind \ split-window -h -c "#{pane_current_path}" 
+bind - split-window -v -c "#{pane_current_path}"
 
 # Move between panes with h,j,k,l
 bind h select-pane -L
