--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,7 +8,7 @@ bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
 # Enable vi mode
 setw -g mode-keys vi
 
-bind Escape copy-mode
+# bind Escape copy-mode
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection
 unbind p
@@ -38,7 +38,7 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 # Change splits to \ and -
-bind \ split-window -h -c "#{pane_current_path}" 
+bind \ split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
 # Move between panes with h,j,k,l
@@ -81,7 +81,7 @@ setw -g pane-active-border-style fg=black,bg=colour35
 setw -g window-style fg=colour240,bg=colour234
 setw -g window-active-style fg=colour230,bg=black
 
-# Command/Message 
+# Command/Message
 set -g message-style fg=black,bg=colour35
 
 # Activity
@@ -108,3 +108,12 @@ set -g status-justify left
 # Show window activity
 setw -g monitor-activity on
 set -g visual-activity on
+
+###########
+# Plugins #
+###########
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
