Sourcing themes and conditionally checking if TPM is installed

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -112,8 +112,15 @@ set -g visual-activity on
 ###########
 # Plugins #
 ###########
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# TPM
+if-shell "[ -f ~/.tmux/plugins ]" \
+"set -g @plugin 'tmux-plugins/tpm'" \
+"set -g @plugin 'tmux-plugins/tmux-resurrect'"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+if-shell "[ -f ~/.tmux/plugins ]" \
+"run '~/.tmux/plugins/tpm/tpm'"
+
+# Enable themes
+if-shell "[ -f ~/.theme.tmux ]" "source ~/.theme.tmux"
