add tmux copy/paste to xterm clipboard

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,6 +14,9 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection
 unbind p
 bind p paste-buffer
 
+# Enable xterm clipboard
+set -g set-clipboard on
+
 ############
 # Bindings #
 ############
