Update to dotfiles
Add binding to open new tmux windows in pwd
Use goimports in vim go
Add gocover alias

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,6 +44,9 @@ setw -g pane-base-index 1
 bind \ split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
+# Have new windows open in current path
+bind c new-window -c "#{pane_current_path}"
+
 # Move between panes with h,j,k,l
 bind h select-pane -L
 bind j select-pane -D
