Update abcde conf

--- a/.abcde.conf
+++ b/.abcde.conf
@@ -1,7 +1,7 @@
 # -----------------$HOME/.abcde.conf----------------- #
 # 
 # A sample configuration file to convert music cds to 
-#       FLAC using abcde version 2.7.2
+#       FLAC using abcde version 2.9.3
 # 
 # http://andrews-corner.org/linux/abcde/index.html
 # -------------------------------------------------- #
@@ -78,12 +78,11 @@ VAPLAYLISTFORMAT='${OUTPUT}/Various-${ALBUMFILE}/${ALBUMFILE}.m3u'
 # in -e 's/ /_/g' after the first sed command.
 mungefilename ()
 {
-  echo "$@" | sed -e 's/^\.*//' | tr -d ":><|*/\"'?[:cntrl:]"
+  echo "$@" | sed -e 's/^\.*//' -e 's/ /_/g' | tr -d ":><|*/\"'?[:cntrl:]"
 }
 
 # What extra options?
 MAXPROCS=2                              # Run a few encoders simultaneously
 PADTRACKS=y                             # Makes tracks 01 02 not 1 2
 EXTRAVERBOSE=2                          # Useful for debugging
-COMMENT='abcde version 2.7.2'           # Place a comment...
 EJECTCD=y                               # Please eject cd when finished :-)
