Add glyrc to abcde

--- a/.abcde.conf
+++ b/.abcde.conf
@@ -14,6 +14,8 @@ LOWDISK=y
 # Specify the method to use to retrieve the track information,
 # the alternative is to specify 'musicbrainz':
 CDDBMETHOD=cddb
+# CDDBMETHOD=musicbrainz
+GLYRC=glyrc
 
 # Make a local cache of cddb entries and then volunteer to use 
 # these entries when and if they match the cd:
@@ -55,7 +57,7 @@ CDDISCID=cd-discid
 OUTPUTDIR="$HOME/Music"               
 
 # The default actions that abcde will take.
-ACTIONS=cddb,playlist,read,encode,tag,move,clean
+ACTIONS=cddb,playlist,read,getalbumart,encode,tag,move,clean
               
 # Decide here how you want the tracks labelled for a standard 'single-artist',
 # multi-track encode and also for a multi-track, 'various-artist' encode:
