update .tmux.conf to escape \

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,7 +43,7 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 # Change splits to \ and -
-bind \ split-window -h -c "#{pane_current_path}"
+bind \\ split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
 # Have new windows open in current path
