--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,9 +10,8 @@ setw -g mode-keys vi
 
 # bind Escape copy-mode
 bind-key -T copy-mode-vi 'v' send -X begin-selection
-# bind-key -T copy-mode-vi 'y' send -X copy-selection
-# bind-key -T copy-mode-vi 'Enter' send -X copy-pipe-and-cancel "xsel -i --clipboard"
-bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "xsel -i --clipboard"
+# bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "xsel -i --clipboard"
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "xclip -selection clipboard"
 unbind p
 bind p paste-buffer
 
