--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -58,7 +58,7 @@ font:
     # style: Italic
 
   # Point size of the font
-  size: 16.0
+  size: 17.0
 
   # Offset is the extra space around each character. offset.y can be thought of
   # as modifying the linespacing, and offset.x as modifying the letter spacing.
@@ -154,7 +154,7 @@ visual_bell:
   duration: 0
 
 # Background opacity
-background_opacity: 1.0
+window.opacity: 1.0
 
 # Mouse bindings
 #
