--- a/.abcde.conf
+++ b/.abcde.conf
@@ -15,7 +15,7 @@ LOWDISK=y
 # the alternative is to specify 'musicbrainz':
 CDDBMETHOD=cddb
 # CDDBMETHOD=musicbrainz
-GLYRC=glyrc
+#GLYRC=glyrc
 
 # Make a local cache of cddb entries and then volunteer to use 
 # these entries when and if they match the cd:
@@ -57,7 +57,8 @@ CDDISCID=cd-discid
 OUTPUTDIR="$HOME/Music"               
 
 # The default actions that abcde will take.
-ACTIONS=cddb,playlist,read,getalbumart,encode,tag,move,clean
+# ACTIONS=cddb,playlist,read,getalbumart,encode,tag,move,clean
+ACTIONS=cddb,playlist,read,encode,tag,move,clean
               
 # Decide here how you want the tracks labelled for a standard 'single-artist',
 # multi-track encode and also for a multi-track, 'various-artist' encode:
